fixed bug with .singleTableRow__cell on iphone size (css)

--- a/src/components/SingleTableRow/SingleTableRow.scss
+++ b/src/components/SingleTableRow/SingleTableRow.scss
@@ -22,6 +22,9 @@
 		&:last-child {
 			border-right: none;
 		}
+		@include breakpoint(newMobile) {
+			font-size: 10px;
+		}
 
 		@include breakpoint(mobilesmall) {
 			font-size: 9px;
